--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,8 +9,12 @@ body {
     font-family: helvetica, Arial, sans-serif;
 }
 
-header {padding: 20px 35px;
+header {
+    padding: 20px 35px;
     background-color: #39a6b2;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 header h1 {
@@ -18,15 +22,14 @@ header h1 {
     font-size: 36px;
     color: #fce138;
     margin: 0;
-    display: inline;
 }
+
 header a {
     text-decoration: none;
     color: #fce138;
 }
 
 header nav {
-    float: right;
     margin: 7px 0;
 }
 
