--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,6 +149,7 @@ header nav ul li a {
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+    background: #fce138;
 }
 
 .step h3 {
@@ -174,6 +175,22 @@ header nav ul li a {
 
 .step-info {
     flex: 2 70%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.step-img {
+    flex: 1 12%;
+    margin-right: 20px;
+}
+
+.step-text{
+    flex: 12;
+}
+
+.step-img img {
+    max-width: 100%;
 }
 
 .trainers {
