--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,7 @@ header nav ul {
 }
 
 header nav ul li a {
-    margin: 0 30px;
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -55,6 +55,7 @@ header nav ul li a {
     background-image: url("../images/hero-bg.jpeg");
     background-size: cover;
     background-position: center;
+    align-items: flex-start;
 }
 
 .hero-cta {
@@ -63,7 +64,7 @@ header nav ul li a {
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 
 .hero-cta h2 {
@@ -123,7 +124,7 @@ header nav ul li a {
 }
 
 .section-title {
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
     border-bottom: 3px solid;
     padding: 20px;
@@ -328,4 +329,22 @@ footer a {
 
 .flex-row {
     display: flex;
+}
+
+/* Media query for smaller desktop screens and smaller */
+
+@media screen and (max-width: 980px) {
+   
+}
+
+/* media query for tablets and smaller */
+
+@media screen and (max-width: 768px) {
+    
+}
+
+/* media query for mobile phones and smaller */
+
+@media Screen and (max-width: 575px) {
+  
 }
